Bug 424769 - Smart bookmarks Recent Tags menu contains self reference (PPC Mac)  (for mak77@supereva.it, r=dietrich, a=beltzner)